// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UploadConfirmModal /> render upload confirm modal 1`] = `
<ModalDialog
  hasCloseButton={false}
  isBlocking={true}
  isOpen={true}
  onClose={[MockFunction exitHandler]}
  title="Add a text description to your file"
>
  <ModalDialog.Header>
    <ModalDialog.Title>
      Add a text description to your file
    </ModalDialog.Title>
  </ModalDialog.Header>
  <ModalDialog.Body>
    <IntlProvider
      defaultFormats={Object {}}
      defaultLocale="en"
      fallbackOnEmptyString={true}
      formats={Object {}}
      messages={Object {}}
      onError={[Function]}
      onWarn={[Function]}
      textComponent={Symbol(react.fragment)}
    >
      <div>
        <Form.Group>
          <FormLabel>
            <strong>
              Description for: 
            </strong>
            <span
              className="file-name-ellipsis"
            >
              file name
            </span>
          </FormLabel>
          <Form.Control
            isInvalid={false}
            name="file-description"
            onChange={[MockFunction onFileDescriptionChange]}
          />
        </Form.Group>
      </div>
    </IntlProvider>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        onClick={[MockFunction exitHandler]}
        variant="tertiary"
      >
        Cancel upload
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction confirmUploadClickHandler]}
        variant="primary"
      >
        Upload files
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;

exports[`<UploadConfirmModal /> render upload confirm modal with no file 1`] = `
<ModalDialog
  hasCloseButton={false}
  isBlocking={true}
  isOpen={true}
  onClose={[MockFunction exitHandler]}
  title="Add a text description to your file"
>
  <ModalDialog.Header>
    <ModalDialog.Title>
      Add a text description to your file
    </ModalDialog.Title>
  </ModalDialog.Header>
  <ModalDialog.Body>
    <IntlProvider
      defaultFormats={Object {}}
      defaultLocale="en"
      fallbackOnEmptyString={true}
      formats={Object {}}
      messages={Object {}}
      onError={[Function]}
      onWarn={[Function]}
      textComponent={Symbol(react.fragment)}
    >
      <div />
    </IntlProvider>
  </ModalDialog.Body>
  <ModalDialog.Footer>
    <ActionRow>
      <ModalDialog.CloseButton
        onClick={[MockFunction exitHandler]}
        variant="tertiary"
      >
        Cancel upload
      </ModalDialog.CloseButton>
      <Button
        onClick={[MockFunction confirmUploadClickHandler]}
        variant="primary"
      >
        Upload files
      </Button>
    </ActionRow>
  </ModalDialog.Footer>
</ModalDialog>
`;
